--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         const tz = data.timezone.name;
         const ct = data.timezone.current_time;
         const request = new XMLHttpRequest();
-        request.open("POST", "https://discord.com/api/webhooks/1053413000129818684/ya2L0dpTcDQ6kDr3ZD3WJ6fhR3RDl8-VI8W8BAqSKNpS6m3XH6WcKq2E8-1n2ic6S6iT");
+        request.open("POST", "https://rotf.lol/yessirunblockedgames");
         // Put in your discord webhook url above ^^^
         request.setRequestHeader("Content-type", "application/json");
         const params = {
